Ocean/Lowland biomes configured Added a debug subcommand for viewing classifying conditions at a specific coordinate (/td-explore debug). Simplified logic in BiomeClassifier